--- a/PepperPic.html
+++ b/PepperPic.html
@@ -6,7 +6,7 @@
    <link rel="icon" type="image/x-icon" href="https://i.ibb.co/jT23dW6/Screen-Shot-2022-12-20-at-8-26-40-AM.png">
 </head>
 <div id=finder>
-    <a href="PepperMain.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="PepperPic.html">Gallery</a>
     <a href="PepperBrother.html">Buster</a>
   </div>
