--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
    <link href="style.css" type="text/css" rel="stylesheet">
    <link rel="icon" type="image/x-icon" href="https://i.ibb.co/jT23dW6/Screen-Shot-2022-12-20-at-8-26-40-AM.png">
 </head>
+<div class="cursor rounded"></div>
+<div class="cursor pointed"><div>
 <div id=finder>
   <a href="index.html">Home</a>
   <a href="PepperPic.html">Gallery</a>
