--- a/PepperBrother.html
+++ b/PepperBrother.html
@@ -21,15 +21,15 @@
 <p>I'm Peppers brother Buster I like going wild and destroying things</p>
 <div id=listone>
   <h3>Favorite Toys</h3>
-  <p>Mallard</p>
+  <p>Bally</p>
   <p>Chickeny</p>
   <p>Ropey</p>
 </div>
 <div id=listtwo>
   <h3>Favorite Treats</h3>
-  <p>Any Food</p>
-  <p>Any Treats</p>
-  <p>Any Liquid</p>
+  <p>Pizza</p>
+  <p>Taco Bell</p>
+  <p>Bacon</p>
 </div>
 <div id=beppy>
   <h3>Best Friend</h3>
