--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 </div>
 <div id=listtwo>
   <h3>Favorite Treats</h3>
-  <p>Doggy Cookies</p>
-  <p>Lamb Bars</p>
-  <p>Dog Oreos</p>
+  <p>Gold Fish</p>
+  <p>Bacon</p>
+  <p>Lamb Treats</p>
 </div>
 <div id=beppy>
   <h3>Worst Enemy</h3>
