--- a/PepperBrother.html
+++ b/PepperBrother.html
@@ -22,7 +22,7 @@
 <div id=listone>
   <h3>Favorite Toys</h3>
   <p>Bally</p>
-  <p>Chickeny</p>
+  <p>Raindeary</p>
   <p>Ropey</p>
 </div>
 <div id=listtwo>
