--- a/PepperBrother.html
+++ b/PepperBrother.html
@@ -28,11 +28,11 @@
 <div id=listtwo>
   <h3>Favorite Treats</h3>
   <p>Pizza</p>
-  <p>Taco Bell</p>
+  <p>Nacho Bell Grande</p>
   <p>Bacon</p>
 </div>
 <div id=beppy>
   <h3>Best Friend</h3>
-  <p>Many may think Pepper is my best friend but really it is Beppy</p>
+  <p>Many may think Pepper's my best friend but really it's Beppy</p>
 </div>
 </html>
