--- a/PepperBrother.html
+++ b/PepperBrother.html
@@ -29,7 +29,7 @@
   <h3>Favorite Treats</h3>
   <p>Pizza</p>
   <p>Nacho Bell Grande</p>
-  <p>Bacon</p>
+  <p>Thin Bacon</p>
 </div>
 <div id=beppy>
   <h3>Best Friend</h3>
