--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
 </div>
 <div id=beppy>
   <h3>Worst Enemy</h3>
-  <p>For weeks ive been battling the evil Beppy The Clown trying to keep his evil at bay</p>
+  <p>For months ive been battling the evil Beppy The Clown trying to keep his evil at bay</p>
 </div>
 </html>
