--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <h3>Favorite Treats</h3>
   <p>Gold Fish</p>
   <p>Bacon</p>
-  <p>Lamb Treats</p>
+  <p>Popcorn</p>
 </div>
 <div id=beppy>
   <h3>Worst Enemy</h3>
