--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <div id=listone>
   <h3>Favorite Toys</h3>
   <p>Raindeary</p>
-  <p>Lambchops</p>
+  <p>Jimmy The Mouse</p>
   <p>Mallard</p>
 </div>
 <div id=listtwo>
