--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <p>I like playing with toys and delious treats</p>
 <div id=listone>
   <h3>Favorite Toys</h3>
-  <p>Raindeary</p>
+  <p>Raindeery</p>
   <p>Jimmy The Mouse</p>
   <p>Mallard</p>
 </div>
