--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <a href="https://ibb.co/DCJPWkj"><img src="https://i.ibb.co/LtFDR6s/Pepper-on-her-back.jpg" alt="Pepper-on-her-back" border="0" style="height:20%; max-width: 40%;"></a>
 </div>
 <h3>About Me</h3>
-<p>I like playing with toys and delious treats</p>
+<p>I like playing with toys and eating treats</p>
 <div id=listone>
   <h3>Favorite Toys</h3>
   <p>Raindeery</p>
