--- a/PepperBrother.html
+++ b/PepperBrother.html
@@ -18,7 +18,7 @@
     <a href="https://ibb.co/X3sL9dp"><img src="https://i.ibb.co/61Pw2pb/Screen-Shot-2022-12-20-at-8-20-34-AM.png" alt="Screen-Shot-2022-12-20-at-8-20-34-AM" border="0" style="height:20%; max-width: 40%;"></a><br /><a target='_blank' href='https://imgbb.com/'></a><br />
 </div>
 <h3>About Me</h3>
-<p>I'm Peppers brother Buster I like going wild and destroying things</p>
+<p>I'm Peppers brother Buster I like going wild and destroying everything</p>
 <div id=listone>
   <h3>Favorite Toys</h3>
   <p>Bally</p>
