--- a/PepperPic.html
+++ b/PepperPic.html
@@ -10,7 +10,7 @@
     <a href="PepperPic.html">Gallery</a>
     <a href="PepperBrother.html">Buster</a>
   </div>
-<h1>Pepper's Gallery</h1>
+<h1>Gallery</h1>
 <div id=picgallery>
     <a href="https://ibb.co/d5tBZrB"><img src="https://i.ibb.co/fx9MJ2M/IMG-2644.jpg" alt="IMG-2644" border="0"></a>
     <a href="https://ibb.co/q52rb33"><img src="https://i.ibb.co/QdxKs33/IMG-2780.jpg" alt="IMG-2780" border="0"></a>
