--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <h3>Favorite Toys</h3>
   <p>Raindeery</p>
   <p>Jimmy The Mouse</p>
-  <p>Mallard</p>
+  <p>Socks</p>
 </div>
 <div id=listtwo>
   <h3>Favorite Treats</h3>
