--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Peppers Website</title>
+  <title>Peppers Website | Home</title>
    <link href="style.css" type="text/css" rel="stylesheet">
    <link rel="icon" type="image/x-icon" href="https://i.ibb.co/jT23dW6/Screen-Shot-2022-12-20-at-8-26-40-AM.png">
 </head>
