--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <a href="PepperPic.html">Gallery</a>
   <a href="PepperBrother.html">Buster</a>
 </div>
-<h1>Pepper</h1>
+<h1>Pepper The Dog</h1>
 <div id=picbox>
   <p></p>
 </div>
