--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <div id=listone>
   <h3>Favorite Toys</h3>
   <p>Raindeery</p>
-  <p>Baseballs</p>
+  <p>Beppy</p>
   <p>Socks</p>
 </div>
 <div id=listtwo>
